# RMLIB

./: CMakeLists.txt  RMLIB.h  main.cpp
Servers/: Memory.cpp  Memory.h  ServerActive.cpp  ServerPasive.cpp  Servers.cpp  linkedList.cpp  linkedList.h  list.cpp  list.h  node.h  rmRef_h.cpp  rmRef_h.h
